midterm/apps/ghost/ghost-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-body-size":"20m"},"name":"ghost","namespace":"ghost"},"spec":{"ingressClassName":"nginx","rules":[{"host":"ghost.104.248.100.26.nip.io","http":{"paths":[{"backend":{"service":{"name":"ghost","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
      nginx.ingress.kubernetes.io/proxy-body-size: 20m
    creationTimestamp: "2026-03-04T20:55:00Z"
    generation: 1
    name: ghost
    namespace: ghost
    resourceVersion: "48252"
    uid: cc74bce5-26da-4d95-9d8f-71fcd093af74
  spec:
    ingressClassName: nginx
    rules:
    - host: ghost.104.248.100.26.nip.io
      http:
        paths:
        - backend:
            service:
              name: ghost
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.105.175.32
kind: List
metadata:
  resourceVersion: ""
